# Auto-Asset-Annotator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py  test_parser_robustness.py
.claude/: file-ownership.md
.claude/agents/: bug-fixer.md  code-refactorer.md  docs-writer.md  feature-implementer.md  script-executor.md  test-writer.md  version-commit-agent.md
config/: config.yaml
docs/changes/: 2026-03-05_batch_fix_execution.md  2026-03-05_commit_summary.md  2026-03-05_data_analysis.md  2026-03-05_dlc_migration.md  2026-03-05_failed_annotations_analysis.md  2026-03-05_failed_annotations_summary.md  2026-03-05_parser_implementation.md  2026-03-05_pipeline_failure_analysis.md  2026-03-05_rawoutput_patterns.md  2026-03-05_reannotation_script.md  2026-03-05_test_validation.md  2026-03-06_final_verification_report.md  2026-03-06_stubborn_15_final_report.md  2026-03-06_stubborn_15_manual_completion.md  2026-03-06_stubborn_assets_final_report.md  2026-03-06_stubborn_assets_rerun.md  2026-03-09_annotation-validation-report.md  2026-03-09_backfill-2816-missing-annotations.md  2026-03-09_backfill-incomplete-physical-properties.md  2026-03-09_fill-default-physical-properties.md  2026-03-09_fill-dimensions-category-medians.md  (+2 more)
scripts/: category_mapping.json  download_model.py  fill_annotations.py  fill_defaults.py  find_failed_assets.py  find_incomplete_assets.py  find_success_assets.py  fix_existing_annotations.py  fix_json_outputs.py  merge_annotations.py  reannotate_failures.py
tests/: test_enhanced_parser.py  test_normalization.py
(+33 files in other folders)
