[project]
name = "auto-asset-annotator"
version = "0.1.0"
description = "3D Asset Automated Annotation Tool based on Qwen3-VL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers",
    "torch",
    "torchvision",
    "pillow",
    "natsort",
    "tqdm",
    "qwen-vl-utils",
    "pyyaml",
    "accelerate",
]

[project.scripts]
auto-annotator = "auto_asset_annotator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_asset_annotator"]
